# demo-soil-moisture

./: README.md
kernel/: rust-toolchain.toml
kernel/makepython-soil-moisture/: Cargo.toml  Makefile
kernel/makepython-soil-moisture/src/: main.rs  policy.rs
